[metadata]
name = cloud-volume
url = https://github.com/seung-lab/cloud-volume/
summary = Read and write neuroglancer Precomputed formats to cloud storage
description-file =
    README.md
author = Ignacio Tartavull, William Silversmith, and others
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/cloud-volume/
classifier =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cloudvolume

[wheel]
universal = 0