[metadata]
name = cloud-volume
url = https://github.com/seung-lab/cloud-volume/
summary = Read and write neuroglancer Precomputed formats to cloud storage
description-content-type = text/markdown
description-file = README.md
author = Ignacio Tartavull, William Silversmith, Nico Kemnitz, and others
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/cloud-volume/
license=BSD
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cloudvolume

[wheel]
universal = 1